# clay

./: .gitignore  Cargo.toml  README.md  app-1479dd1d79f35618.js  app-1479dd1d79f35618_bg.wasm  app-21232e8c849d0db4.js  app-21232e8c849d0db4_bg.wasm  app-229a3af650aa2a64.js  app-229a3af650aa2a64_bg.wasm  app-2339c2f1aeaa26ca.js  app-2339c2f1aeaa26ca_bg.wasm  app-2d1aef4136eeadd0.js  app-2d1aef4136eeadd0_bg.wasm  app-2dbb5b0df8c075e3.js  app-2dbb5b0df8c075e3_bg.wasm  app-3246c07eaa014a5c_bg.wasm  app-36e859c85591abcd.js  app-36e859c85591abcd_bg.wasm  app-399e4301930cde04.js  app-399e4301930cde04_bg.wasm  app-41a43c1c593475ea.js  app-41a43c1c593475ea_bg.wasm  app-4f4460897b7ed3.js  app-4f4460897b7ed3_bg.wasm  app-56bda4cec5901b9d.js  app-56bda4cec5901b9d_bg.wasm  app-57f8eb9c8cd01a5a.js  app-57f8eb9c8cd01a5a_bg.wasm  app-732255784d9060c3_bg.wasm  app-73eae7a573b86a29.js  app-73eae7a573b86a29_bg.wasm  app-84234c5c935e9678.js  app-84234c5c935e9678_bg.wasm  app-8686b0ddcc6e82bd.js  app-8686b0ddcc6e82bd_bg.wasm  app-8ae48fde14a38dfa_bg.wasm  app-98dd50310863dd7_bg.wasm  app-b43459424efc31df_bg.wasm  app-bc93aff7939b3580.js  app-bc93aff7939b3580_bg.wasm  (+7 more)
.github/workflows/: deploy.yml  test.yml
app/: Cargo.toml  Trunk.toml  index.html  tailwind.config.js
app/src/: lib.rs  main.rs  use_camera.rs  use_pointer.rs  use_shapes.rs  use_stack.rs  use_toolbar.rs
app/src/components/: canvas.rs  inner_canvas.rs  mod.rs
app/src/components/toolbar/: mod.rs
editor/: Cargo.toml
editor/src/: guid.rs  lib.rs  rectangle.rs  shape.rs  shape_catalog.rs  tool.rs
math/: Cargo.toml
(+4 files in other folders)
