[workspace]
members = ["app", "editor", "math"]
resolver = "2"

[workspace.dependencies]
wasm-bindgen = "0.2.93"
wasm-bindgen-test = "0.3.43"
wasm-bindgen-futures = "0.4.43"
wasm-logger = "0.2.0"
web-sys = { version = "0.3.70", features = [
    "MouseEvent",
    "Event",
    "PointerEvent",
    "Node",
    "Element",
    "NodeList",
] }
eyre = "0.6.12"
